# Firelocal

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  MULTI_PLATFORM_GUIDE.md  PLATFORM_DOCUMENTATION.md  README.md  SECURITY_AUDIT.md  TDD.txt  journal.md  package-lock.json
.github/workflows/: ci-cd.yml  ci.yml
bindings/dart/: LICENSE  README.md  complex_test.dart  pubspec.yaml  simple_complex_test.dart
bindings/dart/lib/: firelocal_dart.dart
bindings/dart/lib/src/: compaction_stats.dart  field_value.dart  firelocal_base.dart  write_batch.dart
bindings/dart/test/: firelocal_test.dart
bindings/dotnet/: README.md
bindings/dotnet/FireLocal/: CompactionStats.cs  FieldValue.cs  FireLocal.csproj  FireLocalDb.cs  WriteBatch.cs
bindings/dotnet/FireLocal.Tests/: FireLocal.Tests.csproj  FireLocalDbTests.cs
bindings/js/: Cargo.toml  README.md  firelocal-js.linux.node  index.d.ts  index.js  index.win32-x64-msvc.node  package-lock.json  package.json  test.js
bindings/js/src/: lib.rs
bindings/python/: MANIFEST.in  README.md  complex_test.py  pyproject.toml  setup.py  test_firelocal.py
bindings/python/firelocal/: __init__.py  core.py  field_value.py
bindings/python/tests/: test_firelocal.py
firelocal-cli/: Cargo.toml
firelocal-cli/src/: main.rs
firelocal-core/: Cargo.toml
firelocal-core/benches/: performance.rs
firelocal-core/src/: config.rs  error.rs  ffi.rs  field_value.rs  health.rs  lib.rs  listener.rs  logging.rs  model.rs  security.rs  transaction.rs  validation.rs
firelocal-core/src/api/: mod.rs
firelocal-core/src/index/: basic_index.rs  composite.rs  mod.rs
firelocal-core/src/rules/: ast.rs  mod.rs  parser.rs
firelocal-core/src/store/: compaction.rs  io.rs  memtable.rs  mod.rs  sst.rs  wal.rs
firelocal-core/src/sync/: enhanced.rs  firebase.rs  mod.rs
firelocal-core/tests/: api_test.rs  basic_test.rs  error_handling_tests.rs  ffi_test.rs  integration_tests.rs  query_test.rs  rules_test.rs  sync_test.rs
firelocal-wasm/: Cargo.toml  README.md  package.json  pubspec.yaml
firelocal-wasm/.dart_tool/: package_config.json  package_graph.json
firelocal-wasm/.dart_tool/extension_discovery/: vs_code.json
firelocal-wasm/.dart_tool/widget_preview_scaffold/: preview_manifest.json  pubspec.yaml
firelocal-wasm/src/: lib.rs
tests/: simple_stress_test.rs  stress_test.rs
