[package]
name = "firelocal-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sync"]
sync = ["dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = "1.0.100"
crc32fast = "1.5.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.19.0", features = ["v4"] }
