[package]
name = "firelocal-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sync"]
sync = ["dep:reqwest", "dep:tokio"]

[dependencies]
anyhow = "1.0"
crc32fast = "1.3"
dotenv = "0.15"
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "performance"
harness = false
