[package]
name = "firelocal-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
indexmap = "2.0"

# Core dependency for all targets
firelocal-core = { path = "../firelocal-core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
