[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firelocal"
version = "0.1.0"
authors = [
    {name = "FireLocal Team", email = "firelocal@example.com"},
]
description = "Offline-first database with Firestore API compatibility"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["firestore", "offline", "database", "nosql", "firelocal"]

[project.urls]
Homepage = "https://github.com/rajdipk/Firelocal"
Documentation = "https://github.com/rajdipk/Firelocal/blob/main/DOCUMENTATION.md"
Repository = "https://github.com/rajdipk/Firelocal.git"
"Bug Tracker" = "https://github.com/rajdipk/Firelocal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.setuptools]
packages = ["firelocal"]

[tool.setuptools.package-data]
firelocal = ["*.py", "*.so", "*.dll", "*.dylib"]
